openshift/emerald/deploy/base/calendar-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corpcal-ui
  labels:
    app: corpcal-ui
    app.kubernetes.io/name: corpcal
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: corporate-calendar
    app.kubernetes.io/version: ${APP_VERSION}
    app.kubernetes.io/managed-by: github-actions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corpcal-ui
  template:
    metadata:
      labels:
        DataClass: Low
        Internet-Ingress: ALLOW
        app: corpcal-ui
    spec:
      containers:
        - name: corpcal-ui
          image: corpcal-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
