openshift/emerald/deploy/base/calendar-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corpcal-ui
  labels:
    app.kubernetes.io/name: corpcal
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: corporate-calendar
    app.kubernetes.io/version: ${APP_VERSION}
    app.kubernetes.io/managed-by: github-actions
spec:
  selector:
    app: corpcal-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
